# daneel-web

./: .dockerignore  .gitignore  Cargo.toml  DOCS_LICENSE.md  Dockerfile  LICENSE  Makefile  README.md
.asimov/: project.yaml  roadmap.yaml
.claude/: HANDOFF.md
frontend/: style.css
frontend/src/: lib.rs
src/: index.html  main.rs  vectors.rs
